--- a/package.json
+++ b/package.json
@@ -58,13 +58,13 @@
     "serve": "vite preview"
   },
   "devDependencies": {
-    "@types/node": "^17.0.31",
+    "@types/node": "^22.19.3",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.13",
     "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.0.24",
-    "typescript": "^4.6.4",
-    "vite": "^2.9.8",
+    "typescript": "^5.9.3",
+    "vite": "^7.3.0",
     "vite-plugin-solid": "^2.2.6"
   },
   "dependencies": {
@@ -77,7 +77,7 @@
     "semver-compare": "^1.0.0",
     "signature_pad": "^4.0.5",
     "solid-icons": "^1.0.1",
-    "solid-js": "1.3.17",
+    "solid-js": "^1.9.10",
     "toastify-js": "^1.11.2"
   }
 }
