build: optimize library build for mobile WebView compatibility
- Update vite.config.ts with ES2015 target, sourcemaps, esbuild minification
- Update package.json with sideEffects, additional CSS export path
- Update tsconfig.json with Bundler module resolution, include/exclude
- Add path alias configuration for cleaner imports

Build output: ES 685kB (119kB gzip), UMD 516kB (103kB gzip)

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "url": "git+https://github.com/AdityaSetyadi/form-gear.git"
   },
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "main": "./dist/form-gear.umd.js",
   "module": "./dist/form-gear.es.js",
@@ -20,8 +21,12 @@
       "import": "./dist/form-gear.es.js",
       "require": "./dist/form-gear.umd.js"
     },
+    "./style.css": "./dist/style.css",
     "./dist/style.css": "./dist/style.css"
   },
+  "sideEffects": [
+    "**/*.css"
+  ],
   "keywords": [
     "form-gear",
     "form-builder",
