--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,18 @@
     "jsxImportSource": "solid-js",
     "types": ["vite/client"],
 
+    // Strictness - incrementally enabled
     "strict": false,
     "noImplicitAny": false,
     "strictNullChecks": false,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "noImplicitThis": true,
+    "useUnknownInCatchVariables": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
 
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
