--- a/package.json
+++ b/package.json
@@ -65,11 +65,13 @@
     "serve": "vite preview"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.11",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^22.19.3",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.13",
-    "tailwind-scrollbar": "^1.3.1",
-    "tailwindcss": "^3.0.24",
+    "tailwind-scrollbar": "^4.0.2",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
     "vite": "^7.3.0",
     "vite-plugin-dts": "^4.5.4",
@@ -78,7 +80,6 @@
   "dependencies": {
     "@solid-primitives/debounce": "^1.3.0",
     "@solid-primitives/input-mask": "0.0.100",
-    "@tailwindcss/forms": "^0.4.1",
     "@thisbeyond/solid-select": "^0.7.1",
     "dayjs": "^1.11.2",
     "papaparse": "^5.3.2",
