fix(ci): update Node version to 22 and use direct file imports
- Update CI workflow to use Node 22 to match local environment
- Replace directory imports with direct file imports for TypeScript
  bundler moduleResolution compatibility:
  - constants → core/constants
  - events → events/Focus, events/KeyDown
  - PAPI → PAPI/index

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
