ci: drop Node 18, skip duplicate feature/* pushes
- Remove Node 18 from test matrix (Vite 7/Vitest 4 require Node 20+)
- Remove feature/** from push triggers to avoid duplicate CI runs
  (PRs from feature branches already trigger CI via pull_request)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [main, develop, 'feature/**', 'release/**', 'hotfix/**']
+    branches: [main, develop, 'release/**', 'hotfix/**']
   pull_request:
     branches: [main, develop]
 
@@ -165,7 +165,8 @@ jobs:
 
     strategy:
       matrix:
-        node-version: ['18', '20', '22']
+        # Node 18 is not supported - Vite 7 and Vitest 4 require Node 20+
+        node-version: ['20', '22']
       fail-fast: false
 
     steps:
