--- a/package.json
+++ b/package.json
@@ -74,10 +74,10 @@
     "@tailwindcss/forms": "^0.5.11",
     "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/jest-dom": "^6.9.1",
-    "@types/node": "^22.19.3",
+    "@types/node": "^25.3.0",
     "@vitest/coverage-v8": "^4.0.16",
     "autoprefixer": "^10.4.7",
-    "jsdom": "^27.4.0",
+    "jsdom": "^28.1.0",
     "postcss": "^8.4.13",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.18",
@@ -89,12 +89,12 @@
   },
   "dependencies": {
     "@solid-primitives/debounce": "^1.3.0",
-    "@solid-primitives/input-mask": "0.0.100",
-    "@thisbeyond/solid-select": "^0.7.1",
+    "@solid-primitives/input-mask": "^0.3.1",
+    "@thisbeyond/solid-select": "^0.16.0",
     "dayjs": "^1.11.2",
     "papaparse": "^5.3.2",
     "semver-compare": "^1.0.0",
-    "signature_pad": "^4.0.5",
+    "signature_pad": "^5.1.3",
     "solid-icons": "^1.0.1",
     "solid-js": "^1.9.10",
     "toastify-js": "^1.11.2"
